[package]
name = "grape-eve"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "grape_eve"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "^0.24.2"
namespaces = { version = "4.1.3", features = ["no-entrypoint", "cpi"], git = "https://github.com/cardinal-labs/cardinal-namespaces" }
spl-token = "3.2.0"
mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }
