[package]
name = "grape-eve"
version = "0.1.2"
description = "Created with Anchor"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "grape_eve"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []


[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = "3.3.0"
spl-associated-token-account = "1.0.5"
shank = "0.0.4"